se agrega anner en nav

--- a/views/home.html
+++ b/views/home.html
@@ -79,6 +79,9 @@
           </li>
         </ul>
       </nav>
+      <div class="main-banner">
+        <img src="/images/img-home-banner.jpg" alt="banner">
+      </div>
     </header>
     <!-- MAIN -->
     <main>
