--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@ body{
 /* HEADER */
 .main-header{
     background-color: #EAC926;
-    padding: 20px;
+    padding: 20px auto;
 }
 .main-header-top-bar{
     display: flex;
@@ -79,6 +79,9 @@ main{
     width: 90vw;
     background-color: #ebebeb;
     margin: 10px auto;
+}
+.main-banner img{
+  width: 100%;  
 }
 .main-section{
     display: flex;
