--- a/views/login.html
+++ b/views/login.html
@@ -78,6 +78,9 @@
           </li>
         </ul>
       </nav>
+      <div class="main-banner">
+        <img src="/images/img-home-banner.jpg" alt="banner">
+      </div>
     </header>
     <!-- MAIN -->
     <main>
